# Cobalt

./: .gitignore  CMakeLists.txt  Modelloader.cpp  OpenGLTest.cbp  README  README.md  Shaderloader.cpp  Textureloader.cpp  build_all  camera.cpp  camera.h  camera_manager.cpp  camera_manager.h  cobalt.h  doxy_config  fragmentShader.glsl  gl_exception.h  glut.cpp  home.dox  lights.cpp  lights.h  main.cpp  material.cpp  material.h  material_manager.cpp  material_manager.h  mesh.cpp  mesh.h  model_loader.cpp  node.cpp  node.h  normalFragmentShader.glsl  render_pass.h  renderer.h  scene.cpp  scene.h  shader.cpp  shader.h  shader_loader.cpp  shader_manager.cpp  (+17 more)
demo/: CMakeLists.txt
demo/res/shaders/: depthOnlyFragmentShader.glsl  mirrorFragmentShader.glsl  normalFragmentShader.glsl  parallaxMappingFragmentShader.glsl  shadowMappingFragmentShader.glsl  shadowMappingVertexShader.glsl  textureFragmentShader.glsl  untexturedFragmentShader.glsl  vertexShader.glsl
demo/src/: depth_only_render_pass.cpp  depth_only_render_pass.h  main.cpp  mat_demo.cpp  scene_demo.cpp  shadow_map_demo.cpp
editor/: AboutWindow.h  MainWindow.cpp  MainWindow.h  MenuBar.cpp  MenuBar.h  ObjectBrowser.cpp  ObjectBrowser.h  PreviewWidget.cpp  PreviewWidget.h  PropertiesWidget.cpp  PropertiesWidget.h  SceneEditor.pro  about.txt  main.cpp  process_qss.cpp  stylesheet.css
engine/: CMakeLists.txt  bounding_box.cpp  bounding_box.h  camera.cpp  camera.h  cobalt.h  cubemap.cpp  cubemap.h  framebuffer.cpp  framebuffer.h  framebuffer_attachment.cpp  framebuffer_attachment.h  gl_exception.cpp  gl_exception.h  indent.cpp  indent.h  lights.cpp  lights.h  material.cpp  material.h  material_manager.cpp  material_manager.h  mesh.cpp  mesh.h  name_manager.cpp  name_manager.h  named.cpp  named.h  node.cpp  node.h  pointer_wrapper.h  render_pass.h  renderbuffer_framebuffer_attachment.cpp  renderbuffer_framebuffer_attachment.h  scene.cpp  scene.h  shader.cpp  shader.h  shader_loader.cpp  shader_manager.cpp  (+25 more)
wiki/: header.html  home.dox
