include_directories(${PROJECT_SOURCE_DIR}/engine)
add_executable(CobaltDemo src/mat_demo.cpp)
target_link_libraries(CobaltDemo Cobalt)
target_link_libraries(CobaltDemo "-lSOIL")
add_executable(CobaltShadowMapDemo src/shadow_map_demo.cpp src/depth_only_render_pass.cpp)
target_link_libraries(CobaltShadowMapDemo Cobalt)
target_link_libraries(CobaltShadowMapDemo "-lSOIL")